tests/compile-fail/suzu_from_conflicts_source.stderr
error: `from` conflicts with `source(...)` — `from` generates `source(from(...))` automatically
 --> tests/compile-fail/suzu_from_conflicts_source.rs:6:5
  |
6 |     #[suzu(from, source(from(String, suzunari_error::DisplayError::new)))]
  |     ^
